--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<p>Hello and welcome to my page !</p>
 		<p>My name is <kbd>Abderrazak BOUADMA</kbd></p>
 		<p>I'm a software engineer</p>
+		<p>Please find more about me <a href="https://fr.linkedin.com/in/bouadma">here</a> </p>
 	</div>
 </body>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
