Added more text

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 </head>
 <body>
 	<div class="container">
-		<p>Hello and welcome to my page !</p>
+		<h2>Hello and welcome to my page !</h2>
 		<p>My name is <kbd>Abderrazak BOUADMA</kbd></p>
-		<p>I'm a software engineer</p>
+		<p>I'm a Software Engineer</p>
+		<p>I have the role of Technical Architect within a Digital Transformation team of a major banking actor in France and around the world.<br/> I especially code with Java/Go/Bash</p>
 		<p>Please find more about me <a href="https://fr.linkedin.com/in/bouadma">here</a> </p>
 	</div>
 </body>
